@@ -2,6 +2,7 @@ package com.algaworks.junit.utilidade;
 
 import java.util.ArrayList;
 import java.util.List;
+import java.util.stream.Collectors;
 
 public class FiltroNumeros {
 
@@ -10,11 +11,11 @@ public class FiltroNumeros {
     }
 
     public static List<Integer> numerosPares(List<Integer> numeros) {
-        return new ArrayList<>(numeros).stream().filter(numero -> numero % 2 == 0).toList();
+        return new ArrayList<>(numeros).stream().filter(numero -> numero % 2 == 0).collect(Collectors.toList());
     }
 
     public static List<Integer> numerosImpares(List<Integer> numeros) {
-        return new ArrayList<>(numeros).stream().filter(numero -> numero % 2 != 0).toList();
+        return new ArrayList<>(numeros).stream().filter(numero -> numero % 2 != 0).collect(Collectors.toList());
     }
 
     public static boolean isPositivo(int numero) {
